United StatesChange Country, Oracle Worldwide Web Sites Communities I am a... I want to...
Bug ID: 6724890 Deadlock between AWT-EventQueue-1 and AWT-XAWT threads during IDE start
6724890 : Deadlock between AWT-EventQueue-1 and AWT-XAWT threads during IDE start

Details
Type:
Bug
Submit Date:
2008-07-11
Status:
Closed
Updated Date:
2011-05-11
Project Name:
JDK
Resolved Date:
2011-03-07
Component:
client-libs
OS:
linux,generic,windows
Sub-Component:
java.awt
CPU:
x86,generic
Priority:
P2
Resolution:
Fixed
Affected Versions:
6,7
Fixed Versions:
7

Related Reports
Backport:
Duplicate:
Duplicate:
Duplicate:
Duplicate:
Relates:
Relates:
Relates:
Relates:

Sub Tasks

Description
It happenned during NetBeans IDE start. Thread dump attached. JDK 7b30, Ubuntu Hardy 8.04, Linux 2.6.24-19-generic #1 SMP Wed Jun 18 14:43:41 UTC 2008 i686 GNU/Linux. Not reproducible.
It happens again with 1.7.0-ea-b36. I will attach new thread dump. Linux mslama-nb 2.6.24-21-generic #1 SMP Mon Aug 25 17:32:09 UTC 2008 i686 GNU/Linux

                                    

Comments
SUGGESTED FIX

the fix is to use 'object' lock instead of 'this' lock to synchronize getExtendedState|setExtendedState methods.
http://sa.sfbay.sun.com/projects/awt_data/7/6724890
                                     
2009-02-12
EVALUATION

I guess this must not be reproducible after the fix for 6708322 is integrated.
                                     
2008-07-11



Hardware and Software, Engineered to Work Together