6724890: Deadlock between AWT-EventQueue-1 and AWT-XAWT threads during IDE start

Reviewed-by: art, ant